<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="vertical"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

      <TextView
          android:id="@+id/textViewPageName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="1"
          android:background="@color/green"
          android:text="فرم ثبت اطلاعات"
          android:textSize="16sp"
          android:textColor="@color/greenm" />

      <EditText
          android:id="@+id/editTextTextPersonName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="1"
          android:ems="10"
          android:background="@drawable/edit_text_border"
          android:hint="@string/fullName"
          android:inputType="textPersonName"
          android:minHeight="48dp" />

      <EditText
          android:id="@+id/editTextNationalCode"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/nationalCode"
          android:background="@drawable/edit_text_border"
          android:inputType="number"
          android:minHeight="48dp" />

      <EditText
          android:id="@+id/editTextTextBornLocation"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/bornLocation"
          android:background="@drawable/edit_text_border"
          android:inputType="text"
          android:minHeight="48dp" />

      <EditText
          android:id="@+id/editTextTextLocation"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/location"
          android:background="@drawable/edit_text_border"
          android:inputType="text"
          android:minHeight="48dp" />

      <EditText
          android:id="@+id/editTextTextPostalAddress"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="1"
          android:ems="10"
          android:hint="@string/postalAddress"
          android:background="@drawable/edit_text_border"
          android:inputType="number"
          android:minHeight="48dp" />

      <TextView
          android:id="@+id/tvGender"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="0.5"
          android:text="جنسیت:"
          android:textSize="20dp"
          android:textStyle="bold" />

      <RadioGroup
          android:id="@+id/gender"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="end"
          android:layout_weight="0.5"
          android:gravity="center"
          android:orientation="horizontal">

         <RadioButton
             android:id="@+id/male"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:buttonTintMode="multiply"
             android:text="مرد" />

         <Space
             android:layout_width="40dp"
             android:layout_height="match_parent" />

         <RadioButton
             android:id="@+id/female"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:buttonTintMode="multiply"
             android:text="زن" />

      </RadioGroup>

      <Button
          android:id="@+id/setInfo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:layout_weight="0.5"
          android:backgroundTint="@color/pink"
          android:text="ثبت اطلاعات" />
   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>